feat: 新增 ipad 樣式

--- a/src/components/PureCarousel.css
+++ b/src/components/PureCarousel.css
@@ -1,7 +1,29 @@
 .slider {
-    transition: all 330ms ease-in-out;
+    transition: left 5s ease-in-out, transform 2s ease-in-out, visibility 300ms ease-in-out;
 }
 
 .active {
     background-color: '#fff';
+}
+
+/* 1024px 以上的螢幕大小 */
+@media screen and (min-width: 1024px) {
+    .slider {
+        width: 20%;
+    }
+
+    /* .control-visibility {
+        visibility: visible;
+    } */
+}
+
+/* 768 - 1024px 的螢幕大小 */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .slider {
+        width: calc(100% / 3);
+    }
+
+    /* .control-visibility {
+        visibility: hidden;
+    } */
 }
