--- a/src/components/PureCarousel.css
+++ b/src/components/PureCarousel.css
@@ -1,5 +1,5 @@
 .slider {
-    transition: left 5s ease-in-out, transform 2s ease-in-out, visibility 300ms ease-in-out;
+    transition: all .5s ease-in-out;
 }
 
 .active {
